--- a/style.css
+++ b/style.css
@@ -303,6 +303,7 @@ h2 {
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   height: 200px;
+  font-size:56px;
 }
 .layer {
   white-space: pre;
