--- a/style.css
+++ b/style.css
@@ -6,9 +6,7 @@ html {
 }
 html {
   height: 100%;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#d7e1eb), to(#bbc3ce));
-  background-image: -webkit-linear-gradient(#d7e1eb, #bbc3ce);
-  background-image: linear-gradient(#d7e1eb, #bbc3ce);
+  background:#bbc3ce;
   background-size:cover;
     }
 body {
